# CoronaFramework

./: .gitignore  CMakeLists.txt  CODE_REVIEW.md  QUICK_REFERENCE.md  README.md  TODO.md
.cache/clangd/index/: event_bus.cpp.F652056DE9708107.idx  factory.cpp.399AAF222F9DFA94.idx  fast_io_file_system.cpp.E18873F7AAC2BC95.idx  i_dynamic_library.h.73393521AD663CB2.idx  i_event_bus.h.082B74438800C700.idx  i_file_system.h.8103B287FD9CADF9.idx  i_logger.h.145889678769600A.idx  i_plugin_manager.h.8E2DA9ED5F834640.idx  i_sink.h.177D162DF916AACB.idx  i_system.h.B5C7A7B532A34DE5.idx  i_system_context.h.28A72FECD7BFF23E.idx  i_system_manager.h.3A53CAD47967BD45.idx  i_vfs.h.DDC27715559BFF30.idx  i_window.h.8987D1AB5CAE190F.idx  kernel_context.cpp.663617CB6F6E5585.idx  kernel_context.h.7774980E42E81B69.idx  logger.cpp.06FE8492758B351E.idx  main.cpp.8AD2688F9F90D520.idx  performance_test.cpp.AF45B311A9841A77.idx  plugin_manager.cpp.E764025266123F5B.idx  system_base.h.EE4899E0CCE73B7D.idx  system_manager.cpp.3BE12BFFDAF90307.idx  system_test.cpp.7711F11A85C496AE.idx  test_framework.h.0A4F7435AE1C67C5.idx  thread_safety_test.cpp.C3603E83AB9E0C36.idx  vfs.cpp.3EC3892256F074D5.idx  win_dynamic_library.cpp.B6A853D6A973722B.idx  win_window.cpp.FF778CBD42FA88A5.idx
.github/: copilot-instructions.md
cmake/: CompilerSettings.cmake  CoronaFeatures.cmake  CoronaFrameworkConfig.cmake.in  CoronaInit.cmake  CoronaPackaging.cmake  CoronaTargets.cmake  CoronaTbbConfig.cmake  dependencies.cmake
doc/: architecture_comparison.md  build_test_guide_cn.md  code_optimization_plan.md  design_document.md  event_stream_design.md  eventbus_concepts_refactor.md  kernel_design.md  module_usage_guide.md  module_usage_guide_cn.md  pal_design.md  system_design.md  thread_safety_analysis.md  thread_safety_fixes.md  thread_safety_review.md  事件系统指南.md  系统生命周期与调度.md  项目架构概览.md
doc/coro/: coro_usage_guide.md  coro_usage_guide_cn.md
doc/corona_allocator/: 00_QUICK_START.md  01_ARCHITECTURE.md  02_DATA_STRUCTURES.md  03_FRONTEND.md  09_TESTING.md  CORONA_ALLOCATOR_IMPLEMENTATION_PLAN.md  README.md
doc/design/: archetype_design.md
examples/: CMakeLists.txt
examples/01_event_bus/: main.cpp
examples/02_system_lifecycle/: main.cpp
examples/03_event_stream/: main.cpp
examples/04_vfs/: main.cpp
examples/05_multithreading/: main.cpp
examples/06_game_loop/: main.cpp
examples/07_storage/: main.cpp
examples/10_coroutine/: main.cpp
examples/basic/: main.cpp
examples/dummy_system/: dummy_system.h
include/corona/kernel/core/: callback_sink.h  i_logger.h  i_sink.h  kernel_context.h
include/corona/kernel/coro/: awaitables.h  coro.h  coro_concepts.h  executor.h  scheduler.h  task.h  tbb_executor.h  when_all.h
include/corona/kernel/ecs/: archetype.h  archetype_signature.h  chunk.h  component.h  ecs_types.h  entity_id.h  entity_manager.h  world.h
include/corona/kernel/memory/: pool_config.h
include/corona/kernel/system/: i_system_context.h  system_base.h
include/corona/kernel/utils/: lock_free_queue.h  stack_trace.h  storage.h
src/: CMakeLists.txt  main.cpp
src/kernel/: CMakeLists.txt
src/kernel/core/: kernel_context.cpp  logger.cpp
src/kernel/ecs/: archetype.cpp  archetype_layout.cpp  archetype_signature.cpp  chunk.cpp  entity_manager.cpp
src/kernel/include/corona/kernel/: dummy_system.h  i_event_bus.h  i_event_stream.h  i_logger.h  i_plugin_manager.h  i_system.h  i_system_context.h  i_system_manager.h  i_vfs.h  kernel_context.h  system_base.h
src/kernel/include/corona/kernel/core/: i_sink.h  i_vfs.h  kernel_context.h
src/kernel/include/corona/kernel/event/: event_concepts.h  i_event_bus.h  i_event_stream.h
src/kernel/include/corona/kernel/memory/: cache_aligned_allocator.h
src/kernel/include/corona/kernel/system/: i_system.h  i_system_context.h  i_system_manager.h  system_base.h
src/kernel/include/corona/kernel/utils/: lock_free_queue.h  storage.h  task_group.h  task_scheduler.h  work_stealing_queue.h
src/kernel/src/: event_bus.cpp  event_stream.cpp  kernel_context.cpp  logger.cpp  plugin_manager.cpp  system_manager.cpp  vfs.cpp
src/kernel/src/core/: kernel_context.cpp  logger.cpp  plugin_manager.cpp  vfs.cpp
src/kernel/src/event/: event_bus.cpp  event_stream.cpp
src/kernel/src/system/: system_manager.cpp
src/kernel/src/utils/: task_group.cpp  task_scheduler.cpp  work_stealing_queue.cpp
src/kernel/system/: system_base.cpp
src/memory/: CMakeLists.txt
src/memory/include/corona/memory/: allocator.h  allocator_stats.h  config.h
src/memory/src/: allocator_stats.cpp  backend.cpp  bin.cpp  block.cpp  frontend.cpp  thread_local.cpp
src/pal/: CMakeLists.txt
src/pal/include/corona/pal/: i_dynamic_library.h  i_file_system.h  i_window.h
src/pal/src/: factory.cpp  fast_io_file_system.cpp
src/pal/src/common/: fast_io_file_system.cpp
src/pal/src/platform/windows/: win_dynamic_library.cpp
src/pal/windows/: win_window.cpp
test_logs/: TEST_SUMMARY.md
tests/: CMakeLists.txt  README.md  test_framework.h
tests/kernel/: archetype_test.cpp  benchmark_test.cpp  cache_aligned_allocator_test.cpp  coro_cv_test.cpp  coro_executor_test.cpp  coro_generator_test.cpp  coro_mt_test.cpp  coro_scope_test.cpp  coro_sync_test.cpp  coro_task_test.cpp  coro_when_all_test.cpp  entity_manager_test.cpp  event_bus_test.cpp  event_stream_test.cpp  eventbus_mt_test.cpp  eventstream_mt_test.cpp  filesink_mt_test.cpp  lockfree_queue_test.cpp  logger_mt_test.cpp  logger_test.cpp  memory_pool_test.cpp  performance_test.cpp  platform_test.cpp  pluginmanager_mt_test.cpp  static_buffer_test.cpp  storage_test.cpp  system_test.cpp  systemmanager_mt_test.cpp  task_group_test.cpp  thread_safety_test.cpp  vfs_mt_test.cpp  vfs_test.cpp  world_test.cpp
